# mlx90640-library

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  TargetArch.cmake
examples/: fb_stub.c  fbuf.cpp  interp.cpp  step.cpp  test.cpp  video.cpp
mlx90640/: MLX90640_API.cpp  MLX90640_API.h  MLX90640_API_stub.cpp  MLX90640_RPI_I2C_Driver.cpp  MLX90640_RPI_I2C_Driver_stub.cpp  MLX90640_linux_i2c_driver.cpp  main.cpp
